# dbx-system

./: .env  .env.example  .gitignore  AI-DETECTION-DEBUG-REPORT.md  AI-ENGINE-TEST-RESULTS.md  AI_ENGINE_VERIFICATION_REPORT.md  CLEANUP_SUMMARY.md  DATABASE_ENHANCEMENT_COMPLETE.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  FINAL_AUTHENTICATION_STATUS.md  FRONTEND_API_SPECIFICATION.md  HONEST_DATABASE_ASSESSMENT.md  PRESENTATION_SLIDES.md  PRODUCTION_PROJECT_STRUCTURE.md  PRODUCTION_STRUCTURE_VERIFICATION.md  QUICK_START.txt  README-LOCAL-SETUP.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  SECURITY_GUIDE.md  SETUP-SUMMARY.md  SETUP_GUIDE.md  VALIDATION_REPORT.md  build_docker.bat  cleanup_unused.py  demo_presentation.py  demo_system.py  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  evaluate_models.py  main.py  pyproject.toml  quick_test.py  requirements.txt  save_image_windows.bat  simple_production_api.py  (+4 more)
ai-engine/: Dockerfile  requirements.txt
config/: api_key.txt  credentials.txt
database/: DATABASE_REVIEW_REPORT.md  README.md  advanced_security.sql  analytics_functions.sql  backup_recovery.sql  data_lifecycle.sql  enhanced_security.sql  final_test.py  fix_authentication.py  fix_permissions.py  fixed_integration_test.py  honest_recheck.py  init_database.sql  install_complete_database.sql  integration_test.py  performance_optimization.sql  python_integration.py  quick_setup.py  requirements.txt  reset_admin.py  setup_database.py  simple_setup.py  simple_test.py  smart_caching.sql  test_auth.py  test_db_connection.py  test_enhanced_features.py
deployment/: README.md
docker/: Dockerfile.local
docs/: README.md  STRUCTURE_VERIFICATION_SUMMARY.md
legacy/: CLAUDE_SYSTEM_INSTRUCTIONS.md  cleanup_project.py
scripts/: create-sample-data.sql  debug-ai-detection.py  debug-aircraft-detector.py  fix-and-restart.ps1  setup-local.bat  setup-local.ps1  setup-local.sh  test-ai-engine.py  test-ai-simple.py  test-ai-targeted.py  test-api.py
src/: __init__.py  main.py
test_results/: aircraft_data.csv  flight_data.csv  telemetry_data.csv
🗺️GrandLine/: DEEP_DIVE_ENGINEERING_ANALYSIS.md  ML_TRAINING_GUIDE.md  MULTI_AIRCRAFT_SYSTEM_GUIDE.md  (+3 more)
(+111 files in other folders)
